src/snapshots/pbsql__treeqlite__tests__execute_query__create_index_compound_name.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path:
  Err: "Expected 1 identifiers for the index name, got: [\"a\", \"b\"]"
rows_changed: -9223372036854775808
original_query:
  - "CREATE INDEX a.b ON \"~/books/eloScores\" (score)"
