src/snapshots/pbsql__treeqlite__tests__execute_query__create_index_compound_table_name.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path:
  Err: "Expected 1 identifiers for the table name, got: [\"x\", \"y\"]"
original_query:
  - CREATE INDEX a ON x.y (score)
