src/snapshots/pbsql__treeqlite__tests__execute_query__create_table_outside_home_using_parent.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path:
  Err: "Path must start with ~/: etc/passwd"
rows_changed: -9223372036854775808
original_query:
  - "CREATE TABLE IF NOT EXISTS \"~/hi/../../etc/passwd\" ("
  - "    \"excluded\" BOOLEAN NOT NULL DEFAULT FALSE,"
  - "    \"externalLink\" TEXT NOT NULL,"
  - "    \"externalLinkTitle\" TEXT NOT NULL,"
  - "    \"id\" TEXT PRIMARY KEY NOT NULL,"
  - "    \"imageUrl\" TEXT NOT NULL,"
  - "    \"subtitle\" TEXT NULL,"
  - "    \"title\" TEXT NOT NULL"
  - )
