src/snapshots/pbsql__treeqlite__tests__execute_query__create_table_root.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path: {}
rows_changed_or_error:
  Err: "Path must start with ~/: /dev/null"
original_query:
  - "CREATE TABLE IF NOT EXISTS \"/dev/null\" ("
  - "    \"excluded\" BOOLEAN NOT NULL DEFAULT FALSE,"
  - "    \"externalLink\" TEXT NOT NULL,"
  - "    \"externalLinkTitle\" TEXT NOT NULL,"
  - "    \"id\" TEXT PRIMARY KEY NOT NULL,"
  - "    \"imageUrl\" TEXT NOT NULL,"
  - "    \"subtitle\" TEXT NULL,"
  - "    \"title\" TEXT NOT NULL"
  - )
params: "null"
