src/snapshots/pbsql__treeqlite__tests__execute_query__create_table_using_curdir.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path:
  Ok:
    "./test-db/create_table_using_curdir/books/things.tql.sqlite3":
      - PRAGMA foreign_keys = OFF;
      - BEGIN
      - TRANSACTION;
      - CREATE TABLE table_contents (
      - "  \"excluded\" BOOLEAN NOT NULL DEFAULT false,"
      - "  \"externalLink\" TEXT NOT NULL,"
      - "  \"externalLinkTitle\" TEXT NOT NULL,"
      - "  \"id\" TEXT PRIMARY KEY NOT NULL,"
      - "  \"imageUrl\" TEXT NOT NULL,"
      - "  \"subtitle\" TEXT NULL,"
      - "  \"title\" TEXT NOT NULL"
      - );
      - COMMIT;
rows_changed: 0
original_query:
  - "CREATE TABLE IF NOT EXISTS \"~/books/./things/.\" ("
  - "    \"excluded\" BOOLEAN NOT NULL DEFAULT FALSE,"
  - "    \"externalLink\" TEXT NOT NULL,"
  - "    \"externalLinkTitle\" TEXT NOT NULL,"
  - "    \"id\" TEXT PRIMARY KEY NOT NULL,"
  - "    \"imageUrl\" TEXT NOT NULL,"
  - "    \"subtitle\" TEXT NULL,"
  - "    \"title\" TEXT NOT NULL"
  - )
