src/snapshots/pbsql__treeqlite__tests__execute_query__parser_error.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path: {}
rows_changed_or_error:
  Err: "sql parser error: Unterminated string literal at Line: 3, Column 66"
original_query:
  - "INSERT INTO \"~/books/matches\" (\"id\", \"loserId\", \"winnerId\", \"matchDate\")"
  - "VALUES (?, ?, DATETIME('now'), CURRENT_TIMESTAMP('derp))"
params: "null"
