src/snapshots/pbsql__treeqlite__tests__execute_query__unsupported_statement_type.snap
---
source: src/treeqlite.rs
expression: report
---
dumps_by_path:
  Err: "not implemented: Statement::Close"
original_query:
  - close my_eyes;
